 # [#26508] Wrong default format in JParameter->bind()
 # [#25957] wrong behaviour of libraries/joomla/application/module/JModuleHelper:moduleCache()
 # [#26612] Contacts Component sets Reply-To incorrectly in 1.7
 # [#26643] Profile Plugin is not allowing different settings for register and profile

26-Nov-2011 Jean-Marie Simonet
 # [#27241] *Some search plugins do not query for the created date
 # [#27131] Adding 'Last' in menu item ordering. Thanks Elin

23-Nov-2011 Christophe Demko
 - [#27228] Remove the prefix check in the installation since it's buggy
 $ [#27233] Language String Changes for Consistency
 ^ [#27206] Wrong length of #__newsfeeds alias column in joomla.sql
 ^ [#27231] Authentication plugins use deprecated features of joomla platform

19-Nov-2011 Christophe Demko
 # [#27118] *Login Module redirects issue with multilanguage

18-Nov-2011 Christophe Demko
 # [#27190] When Global Cache enabled, sub menus don't expand

17-Nov-2011 Christophe Demko
 ^ Rename libraries/joomlacms by libraries/cms
 # [#27163] Inaccurate language string for empty Introtext (Denise McLaurin)

17-Nov-2011 Jean-Marie Simonet
 # [#26821] Plug-in Manager problem mixing pagination and filter. Thanks Prasit.
 # [#27189] Spelling mistake in com_menu, function name incorrect. Thanks Ryan.
 + Adding Syriac flag sy.gif to mod_languages. Thanks Pauls.

15-Nov-2011 Jean-Marie Simonet
 $ Correcting typo in ini file

14-Nov-2011 Jean-Marie Simonet
 Remove install checks

-------------------- 1.7.3 Stable Release [14-Nov-2011] ------------------

12-Nov-2011 Mark Dexter
 # Revert [#26805] because it breaks modal close behavior in front end (issue 27149)

11-Nov-2011 Jean-Marie Simonet
 # [#26993] Weblinks entries do not delete correctly and display in the weblinks view. Thanks Denise.

10-Nov-2011 Christophe Demko
 #- [#27119] Remove unused title_alias column

09-Nov-2011 Mark Dexter
 # [#26439] Editors have problems with quotes in content plugins syntax

09-Nov-2011 Christophe Demko