@@ -18,6 +18,10 @@ COM_MODULES_ERROR_CANNOT_FIND_MODULE="Cannot find module"
 COM_MODULES_ERROR_CANNOT_GET_MODULE="Cannot get module"
 COM_MODULES_ERROR_INVALID_EXTENSION="Invalid module"
 COM_MODULES_ERROR_NO_MODULES_SELECTED="No module selected"
+COM_MODULES_EXTENSION_PUBLISHED_DISABLED="Module disabled and published"
+COM_MODULES_EXTENSION_PUBLISHED_ENABLED="Module enabled and published"
+COM_MODULES_EXTENSION_UNPUBLISHED_DISABLED="Module disabled and unpublished"
+COM_MODULES_EXTENSION_UNPUBLISHED_ENABLED="Module enabled and unpublished"
 COM_MODULES_FIELD_AUTOMATIC_TITLE_LABEL="Automatic title"
 COM_MODULES_FIELD_AUTOMATIC_TITLE_DESC="Set yes if you want an automatic translated title. Its use depends on the administrator template."
 COM_MODULES_FIELD_CACHE_TIME_DESC="The time before the module is recached"
@@ -50,6 +54,10 @@ COM_MODULES_HEADING_MODULE="Type"
 COM_MODULES_HEADING_PAGES="Pages"
 COM_MODULES_HEADING_POSITION="Position"
 COM_MODULES_HEADING_TEMPLATES="Templates"
+COM_MODULES_HTML_PUBLISH_DISABLED="Publish module::Extension disabled"
+COM_MODULES_HTML_PUBLISH_ENABLED="Publish module::Extension enabled"
+COM_MODULES_HTML_UNPUBLISH_DISABLED="Unpublish module::Extension disabled"
+COM_MODULES_HTML_UNPUBLISH_ENABLED="Unpublish module::Extension enabled"
 COM_MODULES_MANAGER_MODULE="Module Manager: Module %s"
 COM_MODULES_MANAGER_MODULES="Module Manager: Modules"
 COM_MODULES_MENU_ASSIGNMENT="Menu Assignment"
