@@ -716,6 +716,10 @@ a img.calendar {
 	background-image: url(../images/admin/publish_y.png);
 }
 
+.jgrid span.warning	{
+	background-image: url(../images/admin/publish_y.png);
+}
+
 /**
  * Menu Icons
  * These icons are used on the Administrator menu
