@@ -43,6 +43,9 @@ $ -> Language fix or change
  # [#25957] wrong behaviour of libraries/joomla/application/module/JModuleHelper:moduleCache()
  # [#26612] Contacts Component sets Reply-To incorrectly in 1.7
  # [#26643] Profile Plugin is not allowing different settings for register and profile
+ # [#26816] Extension manager - modules status
+ # [#26731] Broken module chrome when using 'New window without navigation'
+ # [#27212] Test CMS migration for platform 11.3
 
 26-Nov-2011 Jean-Marie Simonet
  # [#27241] *Some search plugins do not query for the created date
